# oxo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LOG_TUI.md  README.md
.github/workflows/: ci.yml
config/: default.toml
crates/oxo-alert/: Cargo.toml
crates/oxo-alert/src/: action.rs  config.rs  engine.rs  lib.rs  matcher.rs  state.rs
crates/oxo-analytics/: Cargo.toml
crates/oxo-analytics/src/: anomaly.rs  clustering.rs  correlation.rs  engine.rs  lib.rs  metrics.rs  topn.rs  trend.rs
crates/oxo-cli/: Cargo.toml
crates/oxo-cli/src/: main.rs
crates/oxo-cloudwatch/: Cargo.toml
crates/oxo-cloudwatch/src/: client.rs  convert.rs  lib.rs  response.rs  signing.rs  tail.rs
crates/oxo-core/: Cargo.toml
crates/oxo-core/src/: backend.rs  config.rs  error.rs  event.rs  lib.rs  merged.rs  multiline.rs  pipeline.rs  query.rs  structured.rs  sync.rs  trace.rs
crates/oxo-demo/: Cargo.toml
crates/oxo-demo/src/: lib.rs
crates/oxo-elasticsearch/: Cargo.toml
crates/oxo-elasticsearch/src/: client.rs  lib.rs  response.rs  tail.rs
crates/oxo-local/: Cargo.toml
crates/oxo-local/src/: command.rs  docker.rs  file.rs  kubernetes.rs  lib.rs  stdin.rs
crates/oxo-loki/: Cargo.toml
crates/oxo-loki/src/: client.rs  lib.rs  query.rs  response.rs  tail.rs
crates/oxo-tui/: Cargo.toml
crates/oxo-tui/src/: action.rs  app.rs  event.rs  export.rs  keymap.rs  layout.rs  lib.rs  saved_queries.rs  session.rs  terminal.rs  theme.rs  views.rs
crates/oxo-tui/src/components/: alert_panel.rs  analytics_panel.rs  autocomplete.rs  detail_panel.rs  diff_view.rs  filter_panel.rs  health_dashboard.rs  help.rs  histogram.rs  incident_timeline.rs  live_dashboard.rs  log_viewer.rs  mod.rs  nl_query.rs  query_bar.rs  regex_playground.rs  saved_views.rs  search_bar.rs  source_picker.rs  sparkline.rs  stats_panel.rs  status_bar.rs  tab_bar.rs  time_picker.rs  trace_waterfall.rs
crates/oxo-wasm/: Cargo.toml
crates/oxo-wasm/src/: host.rs  lib.rs  plugin.rs  registry.rs
demo/: .gitignore  README.md  docker-compose.yml  record-all.sh  record-kitty.sh
demo/config/: loki.yml  oxo-demo.toml
demo/log-generator/: Dockerfile  generate.sh
demo/tapes/: 01-quickstart.tape  02-live-tailing.tape  03-query-filter.tape  04-search-navigate.tape  05-multi-source-tabs.tape  06-analytics-stats.tape  07-structured-column.tape  08-alerting.tape  09-advanced-overlays.tape  10-export-workflow.tape
docs/: adding-a-backend.md  architecture.md
website/: index.html  style.css
