[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxo-tui/oxo"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP / WebSocket
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-input = "0.11"

# Regex
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }
directories = "6"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Alerting
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
notify-rust = "4"

# AWS signing (for CloudWatch)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# WASM plugins
wasmtime = "29"

# Internal crates
oxo-core = { path = "crates/oxo-core" }
oxo-loki = { path = "crates/oxo-loki" }
oxo-demo = { path = "crates/oxo-demo" }
oxo-local = { path = "crates/oxo-local" }
oxo-tui = { path = "crates/oxo-tui" }
oxo-alert = { path = "crates/oxo-alert" }
oxo-analytics = { path = "crates/oxo-analytics" }
oxo-elasticsearch = { path = "crates/oxo-elasticsearch" }
oxo-cloudwatch = { path = "crates/oxo-cloudwatch" }
oxo-wasm = { path = "crates/oxo-wasm" }

[profile.release]
lto = true
codegen-units = 1
strip = true
