[package]
name = "oxo-alert"
description = "Alert engine for oxo: SMTP, webhooks, desktop notifications on log patterns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
regex.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
reqwest.workspace = true
lettre.workspace = true
notify-rust.workspace = true
serde_json.workspace = true
