[package]
name = "oxo-demo"
description = "Demo backend for oxo — generates fake log entries for testing the TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
rand = "0.9"
