[package]
name = "oxo-elasticsearch"
description = "Elasticsearch / OpenSearch backend for the oxo observability TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
url.workspace = true
