[package]
name = "oxo-local"
description = "Local backends for oxo: file tailing, command output, Docker, and Kubernetes logs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "fs"] }
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
