[package]
name = "oxo-loki"
description = "Grafana Loki backend for the oxo observability TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
chrono.workspace = true
base64 = "0.22"
