[package]
name = "oxo-tui"
description = "Terminal UI components for the oxo observability TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true
tracing.workspace = true
chrono.workspace = true
futures-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true
arboard = "3"
