[package]
name = "oxo-tui"
description = "Terminal UI components for the oxo observability TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
wasm = ["dep:oxo-wasm"]

[dependencies]
oxo-core.workspace = true
oxo-alert.workspace = true
oxo-analytics.workspace = true
oxo-wasm = { workspace = true, optional = true }
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true
tracing.workspace = true
chrono.workspace = true
futures-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true
regex.workspace = true
arboard = "3"
serde.workspace = true
toml.workspace = true
dirs.workspace = true
