[package]
name = "oxo-wasm"
description = "WASM plugin system for the oxo observability TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxo-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
toml.workspace = true
directories.workspace = true
wasmtime = "29"
